# vg

./: .coveragerc  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  bootstrap.zsh  dev-requirements.in  dev-requirements.txt  dev.py  doc-requirements.in  doc-requirements.txt  netlify.toml  now.json  pyproject.toml  requirements.txt  requirements_ci_py2.txt  requirements_dev_common.txt  requirements_dev_py2.txt  requirements_dev_py3.txt  requirements_doc.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml
doc/: conf.py  index.md  requirements.txt
vg/: __init__.py  _helpers.py  core.py  matrix.py  shape.py  test_aligned_with.py  test_almost_collinear.py  test_almost_equal.py  test_almost_unit_length.py  test_almost_zero.py  test_angle.py  test_apex.py  test_apply_homogeneous.py  test_average.py  test_basis.py  test_core.py  test_cross.py  test_dot.py  test_euclidean_distance.py  test_farthest.py  test_helpers.py  test_internal.py  test_magnitude.py  test_matrix_convert_33_to_44.py  test_matrix_pad_with_ones.py  test_matrix_transform.py  test_matrix_unpad.py  test_nearest.py  test_normalize.py  test_orient.py  test_pad_with_ones.py  test_pca.py  test_perpendicular.py  test_proj.py  test_project.py  test_reject.py  test_reject_axis.py  test_rotate.py  test_scale_factor.py  test_shape.py  (+3 more)
vg/compat/: _matrix.py  test_v1.py  test_v1_deprecated.py  test_v2.py  v1.py  v2.py
vx/: __init__.py  core.py  test_angle.py  test_core.py
