[tool.poetry]
name = "vg"
version = "0.1.0"
description = "Linear algebra for humans: a very good vector-geometry and linear-algebra toolbelt"
authors = ["Paul Melnikow <github@paulmelnikow.com>"]
license = "BSD"
exclude = ["*/test_*.py"]

[tool.poetry.dependencies]
python = ">= 3.7, < 4"
numpy = "^1.20.3"

[tool.poetry.dev-dependencies]
executor = ">= 21.0"
click = "8.0.1"
pytest = "6.2.4"
pytest-cov = "2.12.1"
flake8 = ">=3.7.9,<4.0"
black = "21.6b0"
coverage = "^5.5"
flake8-import-order = "^0.18.1"
Sphinx = "^4.0.2"
sphinxcontrib-apidoc = "^0.3.0"
myst-parser = "^0.15.0"

[build-system]
# Lint requires setuptools.
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
