[tool.poetry]
name = "vg"
version = "2.0.0"
description = "Linear algebra for humans: a very good vector-geometry and linear-algebra toolbelt"
authors = ["Paul Melnikow <github@paulmelnikow.com>", "Metabolize, Body Labs, and other contributors"]
license = "BSD-2-Clause"
include = ["CHANGELOG.md"]
exclude = ["*/test_*.py"]
homepage = "https://vgpy.readthedocs.io/en/stable"
repository = "https://github.com/lace/vg"
documentation = "https://vgpy.readthedocs.io/en/stable"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Operating System :: OS Independent",
]


[tool.poetry.dependencies]
python = ">= 3.7, < 4"
numpy = "*"

[tool.poetry.dev-dependencies]
executor = ">= 21.0"
click = "8.0.1"
pytest = "7.0.1"
pytest-cov = "2.12.1"
flake8 = ">=3.7.9,<4.0"
black = "21.6b0"
coverage = "^5.5"
flake8-import-order = "^0.18.1"
Sphinx = "^4.0.2"
sphinxcontrib-apidoc = "^0.3.0"
myst-parser = "^0.15.0"

[build-system]
# Lint requires setuptools.
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
omit = ["**/test_*.py"]
fail_under = 100.0
