[tool.poetry]
name = "vg"
version = "2.0.0"
description = "Linear algebra for humans: a very good vector-geometry and linear-algebra toolbelt"
authors = ["Paul Melnikow <github@paulmelnikow.com>", "Metabolize, Body Labs, and other contributors"]
license = "BSD-2-Clause"
include = ["CHANGELOG.md"]
exclude = ["*/test_*.py"]
homepage = "https://vgpy.readthedocs.io/en/stable"
repository = "https://github.com/lace/vg"
documentation = "https://vgpy.readthedocs.io/en/stable"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Operating System :: OS Independent",
]


[tool.poetry.dependencies]
python = ">= 3.7, < 4"
numpy = "*"

[tool.poetry.dev-dependencies]
black = "22.3.0"
click = "8.1.3"
coverage = "6.5.0"
executor = ">= 21.0"
flake8 = "4.0.1"
flake8-import-order = "^0.18.1"
myst-parser = "0.17.2"
pytest = "7.1.2"
pytest-cov = "3.0.0"
Sphinx = "4.3.2"
sphinxcontrib-apidoc = "^0.3.0"

[build-system]
# Lint requires setuptools.
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
omit = ["**/test_*.py"]
fail_under = 100.0
